WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165309
[CSS Parser] Fix the color-gamut media query evaluator
https://bugs.webkit.org/show_bug.cgi?id=165309
Summary
[CSS Parser] Fix the color-gamut media query evaluator
Dave Hyatt
Reported
2016-12-02 08:59:22 PST
[CSS Parser] Fix the color-gamut media query evaluator
Attachments
Patch
(1.22 KB, patch)
2016-12-02 09:00 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-02 09:00:40 PST
Created
attachment 295950
[details]
Patch
Dave Hyatt
Comment 2
2016-12-02 09:27:39 PST
Landed in
r209241
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug