[CSS Parser] Fix the color-gamut media query evaluator https://bugs.webkit.org/show_bug.cgi?id=165309

Reviewed by Zalan Bujtas).

* css/MediaQueryEvaluator.cpp:
(WebCore::colorGamutEvaluate):
Unknown values should result in a failed match, not a successful match.



Canonical link: https://commits.webkit.org/182921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209241 268f45cc-cd09-0410-ab3c-d52691b4dbfc